--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <title>TortuGame</title>
 </head>
 <body>
-    
+    <div class="game">
+        <div class="titulo">
+            TORTUGAME
+        </div>
+        <div class="tortuga">
+            Hola
+        </div>
+        <div class="dado">
+            <button>
+                Dado
+            </button>
+        </div>       
+    </div>
 </body>
 </html>
