--- a/index.html
+++ b/index.html
@@ -11,14 +11,25 @@
         <div class="titulo">
             TORTUGAME
         </div>
-        <div class="tortuga">
-            Hola
+        <div class="marco-tortuga">
+            <div class="silueta">
+                <img src="img/silueta.png" alt="tortuga" class="tortuga">
+            </div>
         </div>
-        <div class="dado">
-            <button>
-                Dado
+        <div class="dados">
+            <div class="uno">
+                <img src="img/d6.png" alt="dado" class="dado-uno">
+            </div>
+            <div class="dos">
+                <img src="img/d6.png" alt="dado" class="dado-dos">
+            </div>
+        </div>
+        <div class="lanzar-dados">
+            <button class="btn-tirar">
+                Tirar Dados
             </button>
-        </div>       
+        </div>      
     </div>
+    <script src="game.js"></script>
 </body>
 </html>
