--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <button class="btn-tirar">
                 Tirar Dados
             </button>
+        </div>
+        <div class="vidas">
+            Intentos restantes: <span id="vidas">10</span>
         </div>      
     </div>
     <script src="game.js"></script>
