--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
             </button>
         </div>
         <div class="vidas">
-            Intentos restantes: <span id="vidas">10</span>
+            <div class="corazon" id="corazon1"></div>
+            <div class="corazon" id="corazon2"></div>
+            <div class="corazon" id="corazon3"></div>
+            <div class="corazon" id="corazon4"></div>
+            <div class="corazon" id="corazon5"></div>
+            <div class="corazon" id="corazon6"></div>
+            <div class="corazon" id="corazon7"></div>
+            <div class="corazon" id="corazon8"></div>
+            <div class="corazon" id="corazon9"></div>
+            <div class="corazon" id="corazon10"></div>
         </div>      
     </div>
     <script src="game.js"></script>
