--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="index.css">
     <title>TortuGame</title>
 </head>
 <body>
+    <div class="musica">
+        <audio id="musicaFondo" src="auido/miconvenus.mp3" loop></audio>
+        <button id="btn-musica">
+            <i class="bi bi-volume-up-fill"></i>
+        </button>
+    </div>
+
     <div class="game">
         <div class="titulo">
             TORTUGAME
